--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,15 @@
     font-family: 'Poppins', sans-serif;
   }
 }
+
+/* Scrollbar styling */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #568259;
+  border-radius: 4px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
